--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-display></app-display>
-<a href = "https://angular.io/guide/observables">https://angular.io/guide/observables</a>
+
+<div>
+
+    <a href = "https://angular.io/guide/observables">https://angular.io/guide/observables</a>
+    
+</div>
