--- a/src/app/components/display/display.component.html
+++ b/src/app/components/display/display.component.html
@@ -19,5 +19,10 @@
 
 
 <p>counting 1-10 per second: {{seconds}}</p>
-<p>TODO: counting 1-1000 per millisecond: {{milliseconds}}</p>
-<p>the milliseconds counter will run a bit slow due to the high amount of renders/computations.</p>
+
+<div class="todo-container">
+
+  <p>TODO: counting 1-1000 per millisecond: {{milliseconds}}</p>
+  <p>the milliseconds counter will run a bit slow due to the high amount of renders/computations.</p>
+  
+</div>
